--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="SampleBufferSpan.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VectorWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -213,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SampleContainerSpan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VectorWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
