--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClInclude Include="VectorWriter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ContainerReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -219,6 +222,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VectorWriter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ContainerReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
