add ContainerReaderTests for in-memory processing

--- a/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj
+++ b/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj
@@ -97,6 +97,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ContainerReaderTests.cpp" />
     <ClCompile Include="HelperMethods.cpp" />
     <ClCompile Include="IteratorTests.cpp" />
     <ClCompile Include="MeterChannelTests.cpp" />
