--- a/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="IteratorTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ContainerReaderTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
