add unmanaged console testprogram

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Audio.Asio/TestResults/
 /Docs/.$Audio.Asio.Buffers.drawio.bkp
 /x64/Debug
 /Audio.Asio.Unmanaged/int/Debug/x64
+/Test/RepeatMyself/x64/Debug
