update tests. RepeatMyself works!

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Audio.Asio/TestResults/
 /x64/Debug
 /Audio.Asio.Unmanaged/int/Debug/x64
 /Test/RepeatMyself/x64/Debug
+/Test/RepeatMyself/fred_0.dat
