add ITransport for loop control

--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="ISampleSource.h" />
     <ClInclude Include="ITake.h" />
     <ClInclude Include="ITakeSequence.h" />
+    <ClInclude Include="ITransport.h" />
     <ClInclude Include="MeterChannel.h" />
     <ClInclude Include="MidiEvents.h" />
     <ClInclude Include="MidiInput.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="Take.h" />
     <ClInclude Include="TakeSequence.h" />
     <ClInclude Include="AudioTime.h" />
+    <ClInclude Include="Transport.h" />
     <ClInclude Include="UnknownBase.h" />
     <ClInclude Include="ContainerReader.h" />
     <ClInclude Include="VectorWriter.h" />
@@ -182,6 +184,7 @@
     <ClCompile Include="StreamWriter.cpp" />
     <ClCompile Include="Take.cpp" />
     <ClCompile Include="TakeSequence.cpp" />
+    <ClCompile Include="Transport.cpp" />
     <ClCompile Include="VectorWriter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
