--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="ISampleContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ISampleJoiner.h">
+    <ClInclude Include="ISourceJoiner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ISampleSharer.h">
@@ -51,7 +51,7 @@
     <ClInclude Include="SampleContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SampleJoiner.h">
+    <ClInclude Include="SourceJoiner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SampleSharer.h">
@@ -186,6 +186,12 @@
     <ClInclude Include="Transport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ITransportEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TransportEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -203,7 +209,7 @@
     <ClCompile Include="SampleContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SampleJoiner.cpp">
+    <ClCompile Include="SourceJoiner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SampleSharer.cpp">
@@ -270,6 +276,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Transport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TransportEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
